--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.6",
     "vue": "^2.5.17",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
